# claudefig

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS.md  COMMIT_PLAN.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_HOVER_FLASH.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ADDING_NEW_COMPONENTS.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIG_GUIDE.md  ERROR_MESSAGES.md  FACTORY_USAGE.md  FEATURE_PARITY.md  MCP_SECURITY_GUIDE.md  PRESETS_GUIDE.md
src/claudefig/: __init__.py  __main__.py  cli.py  cli_decorators.py  component.py  component_loaders.py  composer.py  config.py  config_template_manager.py  error_messages.py  exceptions.py  file_instance_manager.py  initializer.py  logging_config.py  models.py  preset_manager.py  preset_validator.py  renderer.py  template_manager.py  tui.py  user_config.py  utils.py
src/claudefig/cli/: __init__.py  decorators.py  handlers.py  main.py  types.py
src/claudefig/cli/commands/: __init__.py  components.py  config.py  files.py  presets.py
src/claudefig/repositories/: __init__.py  base.py  config_repository.py  preset_repository.py
src/claudefig/services/: __init__.py  component_discovery_service.py  config_service.py  file_instance_service.py  preset_definition_loader.py  preset_service.py  structure_validator.py  validation_service.py
src/claudefig/templates/: __init__.py
src/claudefig/templates/default/: settings.json
src/claudefig/tui/: __init__.py  app.py  app_diagnostics.py  styles.tcss
src/claudefig/tui/base/: __init__.py  mixins.py  modal_screen.py  navigation.py
src/claudefig/tui/panels/: __init__.py  config_panel.py  content_panel.py  initialize_panel.py  presets_panel.py
src/claudefig/tui/screens/: __init__.py  apply_preset.py  core_files.py  create_preset.py  create_preset_wizard.py  delete_preset.py  file_instance_edit.py  file_instances.py  general_config.py  overview.py  preset_details.py  project_settings.py  save_component.py
src/claudefig/tui/styles/: base.tcss  panels.tcss  screens.tcss  widgets.tcss
src/claudefig/tui/widgets/: __init__.py  checkbox_list.py  compact_single_instance.py  file_instance_item.py  file_type_section.py  overlay_dropdown.py  preset_card.py  single_instance_control.py
src/claudefig/utils/: __init__.py  paths.py  platform.py
src/claudefig_data/: __init__.py
src/claudefig_data/default_components/frameworks/fastapi/: component.toml  content.md
src/claudefig_data/default_components/general/git-workflow/: component.toml  content.md
src/claudefig_data/default_components/general/software-practices/: component.toml  content.md
src/claudefig_data/default_components/general/testing-principles/: component.toml  content.md
src/claudefig_data/default_components/languages/python/: component.toml  content.md
src/presets/: builtin_presets.toml
src/presets/default/: .claudefig.toml  claudefig.toml
src/presets/default/claude/: statusline.sh
src/presets/default/claude/hooks/: example.py
src/presets/default/components/claude_md/default/: CLAUDE.md
src/presets/default/components/gitignore/default/: .gitignore
src/presets/default/components/mcp/default/: config.json
src/presets/default/components/mcp/example-memory/: config.json
src/presets/default/components/mcp/http-apikey/: README.md  config.json
src/presets/default/components/mcp/http-oauth/: README.md  config.json
src/presets/default/components/mcp/stdio-local/: README.md
src/presets/default/components/plugins/default/: plugin.json
src/presets/default/components/settings_local_json/default/: settings.local.json
src/presets/default/components/skills/default/: skill.md
src/templates/default/: CONTRIBUTING.md  __init__.py  gitignore_entries.txt
src/templates/default/claude/: settings.json
src/templates/default/claude/agents/: example.md
src/templates/default/claude/commands/: example.md
src/templates/default/claude/hooks/: example.py
src/templates/default/claude/output-styles/: example.md
tests/: __init__.py  conftest.py  factories.py  test_claude_features.py  test_cli_components.py  test_cli_config.py  test_cli_decorators.py  test_cli_files.py  test_cli_main.py  test_cli_presets.py  test_cli_templates.py  test_component.py  test_component_discovery_service.py  test_component_loaders.py  test_composer.py  test_config.py  test_config_cli.py  test_config_repository.py  test_config_service.py  test_config_template_manager.py  test_error_messages.py  test_exceptions.py  test_file_instance_item.py  test_file_instance_manager.py  test_file_instance_service.py  test_initializer.py  test_integration.py  test_logging_config.py  test_mcp_automation.py  test_mixins.py  test_models.py  test_preset_definition_loader.py  test_preset_manager.py  test_preset_repository.py  test_preset_service.py  test_preset_validator.py  test_properties.py  test_renderer.py  test_structure_validator.py  test_template_manager.py  (+5 more)
tests/fixtures/test_components/general/base/: component.toml  content.md
tests/fixtures/test_components/general/conflicting/: component.toml  content.md
tests/fixtures/test_components/general/malformed/: component.toml
tests/fixtures/test_components/general/simple/: component.toml  content.md
tests/fixtures/test_components/general/with_conflicts/: component.toml  content.md
tests/fixtures/test_components/general/with_deps/: component.toml  content.md
tests/fixtures/test_components/general/with_recommends/: component.toml  content.md
tests/fixtures/test_components/languages/with_variables/: component.toml  content.md
tests/utils/: test_platform.py
tools/: README.md  app_diagnostics.py
