[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "claudefig"
dynamic = ["version"]
description = "Universal config CLI tool for setting up Claude Code repositories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joshua McDonald", email = "joshua@joshuamcdonald.me"}
]
keywords = ["claude", "claude-code", "cli", "configuration", "repo-setup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0,<9.0",
    "rich>=13.0,<15.0",
    "textual>=0.47.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "platformdirs>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-factoryboy>=2.6.0",
    "pytest-benchmark>=4.0",
    "factory-boy>=3.3.0",
    "hypothesis>=6.92",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "tox>=4.0",
]

[project.urls]
Homepage = "https://github.com/robmcdonald5/claudefig"
Documentation = "https://github.com/robmcdonald5/claudefig#readme"
Repository = "https://github.com/robmcdonald5/claudefig"
Changelog = "https://github.com/robmcdonald5/claudefig/blob/main/CHANGELOG.md"
Issues = "https://github.com/robmcdonald5/claudefig/issues"

[project.scripts]
claudefig = "claudefig.__main__:main"

# Hatchling configuration
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/claudefig/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claudefig", "src/presets", "src/claudefig_data"]

# Ruff formatter configuration (replaces Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by ruff format)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"_version.py" = ["UP007"]  # auto-generated by setuptools-scm

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "claudefig.utils.platform"
warn_unused_ignores = false  # Platform-specific code has OS-dependent type ignores

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--cov=claudefig",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/tui/*",  # Exclude TUI from coverage (complex UI testing, manual QA preferred)
]

[tool.coverage.report]
fail_under = 70.0  # Improved threshold for core business logic (excluding TUI/CLI)
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TYPE_CHECKING:",
]
precision = 2
skip_empty = true
